# ironic-driver-oneview

./: .gitignore  README.md  update_stack_with_oneview_driver.sh
ironic-oneview-cli/: .testr.conf  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ironic-oneview-cli/ironic_oneview_cli/: __init__.py  common.py  exceptions.py  facade.py  openstack_client.py  service_logging.py  shell.py
ironic-oneview-cli/ironic_oneview_cli/create_flavor_shell/: commands.py  objects.py
ironic-oneview-cli/ironic_oneview_cli/create_node_shell/: commands.py
ironic-oneview-cli/ironic_oneview_cli/create_port_shell/: commands.py
ironic-oneview-cli/ironic_oneview_cli/delete_node_shell/: commands.py
ironic-oneview-cli/ironic_oneview_cli/genrc/: commands.py
ironic-oneview-cli/ironic_oneview_cli/migrate_node_shell/: commands.py
ironic-oneview-cli/ironic_oneview_cli/tests/: stubs.py
ironic-oneview-cli/ironic_oneview_cli/tests/functional/: test_functional_ironic_oneview_cli.py
ironic-oneview-cli/ironic_oneview_cli/tests/unit/: test_unit_ironic_oneview_cli.py
ironic-oneviewd/: .gitignore  .gitlab-ci.yml  .testr.conf  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ironic-oneviewd/config/: oneviewd-config-generator.conf
ironic-oneviewd/etc/ironic-oneviewd/: ironic-oneviewd.conf.sample
ironic-oneviewd/ironic_oneviewd/: exceptions.py  facade.py  shell.py  utils.py
ironic-oneviewd/ironic_oneviewd/conf/: __init__.py  default.py  oneview.py  openstack.py  opts.py
ironic-oneviewd/ironic_oneviewd/node_manager/: commands.py  manage.py
ironic-oneviewd/ironic_oneviewd/openstack/common/: _i18n.py  cliutils.py
ironic-oneviewd/ironic_oneviewd/tests/functional/: test_ironic_oneviewd.py
ironic/ironic/drivers/: oneview.py
networking-oneview/: .coveragerc  .gitignore  .gitlab-ci.yml  .gitreview  .testr.conf  AUTHORS  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
networking-oneview/config/: mech_oneview.ini
networking-oneview/doc/source/: conf.py  index.rst  installation.rst  usage.rst
networking-oneview/networking_oneview/: __init__.py
networking-oneview/networking_oneview/conf/: opts.py
networking-oneview/networking_oneview/db/: oneview_network_db.py  oneview_network_db_tables.py
networking-oneview/networking_oneview/samples/: ml2_conf.ini
networking-oneview/releasenotes/source/: conf.py  index.rst
shell/: commands.py  objects.py  oneviewclient.py  ov-flavor.sh  ov_flavor_shell.py  requirements.txt  test_objects.py  test_oneviewclient.py  test_test.py  unittest_list.py
sync-service/: config_client.py  manage_ironic_nodes.py  oneview_client.py  oneview_uri.py  openstack_client.py  rabbitmq_client.py  requirements.txt  service_logging.py  service_manager.py  sync-service.sh  sync.conf.sample  sync_exceptions.py  system_test_oneview_client.py  test_oneview_client.py
sync-service/tests/: test_oneview_client.py
(+22 files in other folders)
