[metadata]
name = ironic-oneview-cli
summary = Command Line Interface to ease the use of OneView Driver for Ironic
description-file = README.rst
author = OpenStack
author-email = thiagop@lsd.ufcg.edu.br
home-page = http://git.lsd.ufcg.edu.br/ironic-drivers/ironic-oneview-cli
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ironic_oneview_cli
    
[entry_points]
console_scripts =
    ironic-oneview = ironic_oneview_cli.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic-oneview-cli/locale
domain = ironic-oneview-cli

[update_catalog]
domain = ironic-oneview-cli
output_dir = ironic-oneview-cli/locale
input_file = ironic-oneview-cli/locale/ironic-oneview-cli.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ironic-oneview-cli/locale/ironic-oneview-cli.pot
