[metadata]
name = ironic-oneviewd
summary = Deamon service to enroll nodes to be used for the Ironic OneView Driver
description-file =
    README.rst
author = Universidade Federal de Campina Grande
author-email = openstack@lsd.ufcg.edu.br
home-page = http://git.lsd.ufcg.edu.br/ironic-drivers/ironic-oneviewd
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
data_files =
    /etc/ironic-oneviewd = etc/ironic-oneviewd/*

packages =
    ironic_oneviewd

[entry_points]
console_scripts =
    ironic-oneviewd = ironic_oneviewd.shell:main

oslo.config.opts =
    ironic-oneviewd = ironic_oneviewd.conf.opts:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic-oneviewd/locale
domain = ironic-oneviewd

[update_catalog]
domain = ironic-oneviewd
output_dir = ironic-oneviewd/locale
input_file = ironic-oneviewd/locale/ironic-oneviewd.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
output_file = ironic-oneviewd/locale/ironic-oneviewd.pot
